@@ -15,6 +15,8 @@
 require_once __DIR__ . '/lib/Application.php';
 Horde_Registry::appInit('ingo');
 
+$vars = $injector->getInstance('Horde_Variables');
+
 /* Redirect if whitelist not available. */
 if (!in_array(Ingo_Storage::ACTION_WHITELIST, $session->get('ingo', 'script_categories'))) {
     $notification->push(_("Whitelist is not supported in the current filtering driver."), 'horde.error');
@@ -25,11 +27,10 @@ $ingo_storage = $injector->getInstance('Ingo_Factory_Storage')->create();
 $whitelist = $ingo_storage->retrieve(Ingo_Storage::ACTION_WHITELIST);
 
 /* Perform requested actions. */
-switch (Horde_Util::getFormData('actionID')) {
+switch ($vars->actionID) {
 case 'rule_update':
     try {
-        $whitelist->setWhitelist(Horde_Util::getFormData('whitelist'));
-        $ingo_storage->store($whitelist);
+        Ingo::updateListFilter($vars->whitelist, Ingo_Storage::ACTION_WHITELIST);
         $notification->push(_("Changes saved."), 'horde.success');
         if ($prefs->getValue('auto_update')) {
             Ingo::updateScript();
